Fixed an issue with iframes being displayed too narrow.

--- a/var/httpd/htdocs/skins/Agent/default/css/ITSM.ChangeManagement.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/ITSM.ChangeManagement.Default.css
@@ -36,6 +36,10 @@
     min-height: 450px;
 }
 
+.FixedLabelSmall iframe.Field {
+    width: 80%;
+}
+
 .ITSMMessageBrowser {
     margin-bottom: 10px;
     padding: 0px;
